app/assets/stylesheets/encoon.css.scss
/*
 * encoding: utf-8
 *
 * Encoon : data structuration, presentation and navigation.
 * 
 * Copyright (C) 2012 David Lambert
 * 
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 * 
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 * 
 * See doc/COPYRIGHT.rdoc for more details.
 *= require_self
 */
@import "blueprint/reset";
@import "compass/css3/box-shadow";
@import "compass/css3/text-shadow";
@import "compass/css3/border-radius";
@import "compass/css3/images";
@import "compass/css3/transition";
@import "compass/typography/lists/inline-list";
@import "compass/typography/links/link-colors";
@import "compass/typography/lists/bullets";
@import "compass/typography/links/hover-link";
@import "blueprint";

$default-border-radius: 4px;
$blueprint-font-family: "Trebuchet MS", Georgia, "Times New Roman", Times, serif;
$blueprint-font-size: 12px;
$background-color: #e8f0e3;
$background-color-article: white;
$background-color-table: #e8f0e3;
$background-color-header: white;
$background-color-actions: #e8f0e3; 
$background-color-buttons: #C0C0C0; 
$background-color-banner: darkOliveGreen;
$title-color: #B50000;
$detail-color: black;
$shadow-color: #C0C0C0;

@mixin shadow {
  @include single-box-shadow($shadow-color, 3px, 3px, 3px); 
}

@mixin text-shadow {
  @include single-text-shadow($shadow-color, 2px, 2px, 2px);
}

@mixin transition {
  @include transition-property(all);
  @include transition-duration(0.3s);
  @include transition-timing-function(ease-in); 
}

@include blueprint;

body {
  background: {
    color: $background-color;
  }
}

.content1-1 {
  @include float-left;
  width: 100%;
}

.content3-4 {
  @include float-left;
  width: 75%;
}

.sidebar {
  @include float-right;
  width: 25%;
}

.article {
  margin-left: 4px;
  margin-right: 4px;
  margin-top: 4px;
  margin-bottom: 8px;
  padding: 4px;
  background-color: $background-color-article;
  opacity: 0.8;
  filter: alpha(opacity=80);
}

.highlighted {
  margin-left: 4px;
  margin-right: 4px;
  margin-top: 4px;
  margin-bottom: 8px;
  padding: 4px;
  background-color: $background-color-article;
  @include shadow;
  @include border-radius;
}

h1 {
  font-size: 160%;
  font-weight: bolder;
  @include text-shadow;
  .title {
    color: $title-color;
  }
}

h2 {
  font-size: 125%;
  font-weight: bolder;
  @include text-shadow;
  .title {
    color: $title-color;
  }
}

.detail-article {
  display: inline;
  font-size: 10px;
  font-weight: normal;
  font-style: italic;
  margin-top: 2px;
  margin-bottom: 2px;
  line-height: 14px;
  color: $detail-color;
}

.information {
  display: inline;
  font-size: 95%;
  font-weight: normal;
  font-style: normal;
  background: #ffd;
  color: black;
  border: 1px solid red;
  img {
    border: 0;
  }
}

p {
  margin-left: 0;
  margin-right: 0;
  margin-top: 0;
  margin-bottom: 8px;
  text-align: justify;
  font-size: 90%;
  line-height: 140%;
}

a {
  @include link-colors($title-color, $detail-color, $detail-color, black);
  @include hover-link;
  @include transition;
  text-decoration: underline;
}

img {
  @include border-radius;
}

ul {
  @include no-bullets;
  padding: 0;
  margin:0;
}

li {
  @include no-bullets;
  padding: 0;
  margin:0;
}

table {
  border-collapse: collapse;
  width: 100%;
  margin-bottom: 0;
  tr {
    padding: 2px;
    vertical-align: text-top;
  }
  td {
    padding-top: 0;
    padding-bottom: 0;
    padding-left: 2px;
    padding-right: 2px;
    vertical-align: text-top;
  }
  .header {
    text-align: right;
    width: 33%;
    @include text-shadow;
  }
  .string {
    width: 100%;
    text-align: left;
    border-top: 1px solid $background-color-table;
  }
  .date {
    width: 100%;
    text-align: left;
    border-top: 1px solid $background-color-table;
  }
  .number {
    width: 100%;
    text-align: left;
    border-top: 1px solid $background-color-table;
  }
  .boolean {
    width: 100%;
    text-align: left;
    border-top: 1px solid $background-color-table;
  }
  .list-header {
    text-align: left;
    background-color: $background-color-header;
    @include text-shadow;
  }
  .list-date {
    width: 80px;
    text-align: center;
    border-left: 1px solid $background-color-table;
    border-top: 1px solid $background-color-table;
  }
  .list-number {
    width: 80px;
    text-align: right;
    border-left: 1px solid $background-color-table;
    border-top: 1px solid $background-color-table;
  }
  .list-string {
    text-align: left;
    border-left: 1px solid $background-color-table;
    border-top: 1px solid $background-color-table;
  }
  .list-boolean {
    width: 15px;
    text-align: center;
    border-left: 1px solid $background-color-table;
    border-top: 1px solid $background-color-table;
  }
  .list-description {
    text-align: left;
    border-left: 1px solid $background-color-table;
    border-top: 1px solid $background-color-table;
  }
  .list-information {
    width: 100%;
    text-align: left;
    border-bottom: 0;
  }
  .column-header {
    min-width: 40px;
    max-width: 40px;
    text-align: center;
    vertical-align: middle;
    background-color: $background-color-header;
    border-top: 1px solid $background-color-table;
  }
}

.actions {
  font-size: 90%;
  padding: 4px;
  background-color: $background-color-actions;
  vertical-align: middle;
  @include border-radius;
  .button { 
    display: inline;
    vertical-align: middle;
    input {
      font-size: 80%;
      display: inline;
      background-color: $title-color; 
      text-decoration: none;
      padding: 4px;
      margin: 4px;
      color: white;
      border: 0;
      @include border-radius;
      @include text-shadow;
      @include transition;
      &:hover {
        background-color: black;
        text-decoration: none;
      }
    }
  }
  a {
    background-color: white;
    text-decoration: none;
    padding: 2px;
    margin: 2px;
    vertical-align: middle;
    @include border-radius;
    @include text-shadow;
    @include transition;
    &:hover {
      background-color: $title-color;
      color: white;
      text-decoration: none;
    } 
  }
  input {
    display: inline;
    text-decoration: none;
    padding: 4px;
    border: 0;
    margin: 4px;
    @include transition;
    &[type=text] {
      vertical-align: middle;
      width: auto;        
      border-spacing: 0;
    }
    &[type=radio] {
      vertical-align: middle;
      width: auto;        
      border-spacing: 0;
      padding: 4px;
    }
    &[type=checkbox] {
      vertical-align: middle;
      width: auto;        
      border-spacing: 0;
      padding: 4px;
    }
  }
}

.action-header {
  background: $background-color-banner;
  color: $background-color;
  text-align: center;
  font-weight: bolder;
}

.required {
  display: inline;
  color: red;
}

.new {
  font-size: 7pt;
  font-weight: bolder;
  font-style: normal;
  color: black;
  background-color: yellow;
  padding: 2px;
  display: inline;
  @include shadow;
  @include border-radius;
}

.form {
  margin-top: 4px;
  margin-bottom: 4px;
  background-color: $background-color-actions;
  input {
    border: 1px solid $background-color-table;
    font-size: 90%;
    vertical-align: middle;
    padding: 0;
    margin: 1px;
    @include transition;
    &:hover { 
      background-color: $background-color-article; 
    }
    &[type=text] {
      vertical-align: middle;
      width: auto;        
      border-spacing: 0;
    }
  }
  select {
    vertical-align: middle;
    font-size: 90%;
    margin: 1px;
    font-family: $blueprint-font-family;
    @include transition;
  }
  textarea {
    border: 1px solid $background-color-table;
    vertical-align: middle;
    font-family: $blueprint-font-family;
    font-size: 90%;
    margin: 1px;
    width: auto;        
    height: auto;        
    @include transition;
  }
  td {
    border-top: 0;
  }
}

.filter {
  background-color: $background-color-actions; 
  td {
    border-top: 0;
  }
}

.spinner {
 display: inline;
}

.close-button {
  a {
    float: right;
    display: inline;
    font-size: 80%;
    @include link-colors(black);
    @include hover-link;
    background-color: $background-color-actions; 
    text-decoration: none;
    padding: 4px;
    @include border-radius;
    @include text-shadow;
    @include transition;
    &:hover {
      background-color: $title-color;
      color: white;
      text-decoration: none;
    }
  } 
}

.mini-photo {
 display: inline;
}

.notice {
  @include clearfix;
  margin-bottom: 0;
}

.error {
  @include clearfix;
  margin-bottom: 0;
  border-color: red;
}

#error_explanation {
  color: $title-color;
  h2 {
    color: $title-color;
  }
}

.field_with_errors {
  color: red;
  display: inline;
  input {
    border-color: red;
  }
  select {
    border-color: red;
  }
  textarea {
    border-color: red;
  }
}

#banner {
  @include clearfix;
  @include float-left;
  font-size: 120%;
  width: 100%;
  padding-top: 4px;
  padding-bottom: 4px;
  color: white;
  background: $background-color-banner;
  #header-application {
    @include float-left;
    background: $background-color-banner;
    text-align: left;
    padding-left: 8px;
  }
  #header-links {
    @include float-right;
    text-align: right;
    background: $background-color-banner;
    padding-right: 8px;
  }
  a {
    @include link-colors(white);
    @include hover-link;
    text-decoration: none;
    font-weight: bolder;
    padding: 2px;
    @include border-radius;
    @include transition;
    &:hover {
      background-color: $background-color-buttons;
      text-decoration: none;
    }
  } 
  form {
    display: inline;
    input {
      margin: 0;
      padding: 2px;
      border: 0;
      font-size: 80%;
      text-decoration: none;
      text-align: center;
      font-family: $blueprint-font-family;
      @include border-radius;
      @include transition;
      &[type=text] {
        width: auto;        
        border-spacing: 0;
        vertical-align: baseline;
        @include text-shadow;
      }
    }
    select {
      margin: 0px;
      padding: 0;
      border: 0;
      font-family: $blueprint-font-family;
      @include border-radius;
      @include text-shadow;
      @include transition;
    }
  }
}

#workspaces {
  @include clearfix;
  width: 100%;
  font-size: 100%;
  background-color: white; 
  padding-top: 8px;
  padding-bottom: 8px;
  .button { 
    display: inline;
    padding: 4px;
  }
  a {
    text-decoration: none;
    padding: 4px;
    border: 1px solid $background-color-table;
    @include border-radius;
    @include text-shadow;
    @include transition;
    &:hover {
      border: 1px solid $title-color;
      background-color: $title-color;
      color: white;
      text-decoration: none;
    } 
  }
}

#breadcrumbs {
  @include clearfix;
  width: 100%;
  font-size: 90%;
  background-color: $background-color-actions; 
  margin-bottom: -4px;
  line-height: 24px;
  .button { 
    display: inline;
    padding: 4px;
  }
  a {
    @include link-colors(black);
    @include hover-link;
    text-decoration: none;
    padding: 4px;
    @include border-radius;
    @include text-shadow;
    @include transition;
    &:hover {
      background-color: $title-color;
      color: white;
      text-decoration: none;
    } 
  }
}

#breadcrumbs-content {
  padding: 4px;
}

#footer {
  @include clearfix;
  width: 100%;
}

#create-button {
  display: inline;
}

